# tollan

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rtd-environment.yml  .travis.yml  404.html  MANIFEST.in  README.md  README.rst  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml  python-app.yml  python-publish.yml
_modules/: index.html  logging.html
_modules/tollan/: utils.html
_modules/tollan/utils/: db.html  dirconf.html  env.html  fmt.html  log.html  misc.html  mpl.html  namespace.html  nc.html  np.html  registry.html  schema.html  slice.html  sys.html  wraps.html
_sources/: index.rst.txt
_sources/api/: tollan.utils.FileLoc.rst.txt  tollan.utils.anysum.rst.txt  tollan.utils.call_subprocess_with_live_output.rst.txt  tollan.utils.cli.click_helpers.ctx_no_recreate_obj.rst.txt  tollan.utils.cli.click_helpers.hook_ctx_make_context.rst.txt  tollan.utils.cli.click_helpers.varg_command.rst.txt  tollan.utils.cli.multi_action_argparser.MultiActionArgumentParser.rst.txt  tollan.utils.cli.path_type.PathType.rst.txt  tollan.utils.db.SqlaDB.rst.txt  tollan.utils.db.TableDef.rst.txt  tollan.utils.db.TableDefList.rst.txt  tollan.utils.db.conventions.client_info.rst.txt  tollan.utils.db.conventions.client_info_fk.rst.txt  tollan.utils.db.conventions.client_info_model.rst.txt  tollan.utils.db.conventions.client_info_table.rst.txt  tollan.utils.db.conventions.client_info_tbl.rst.txt  tollan.utils.db.conventions.created_at.rst.txt  tollan.utils.db.conventions.default_sql_utcnow.rst.txt  tollan.utils.db.conventions.desc.rst.txt  tollan.utils.db.conventions.fk.rst.txt  tollan.utils.db.conventions.label.rst.txt  tollan.utils.db.conventions.ms_utcnow.rst.txt  tollan.utils.db.conventions.name.rst.txt  tollan.utils.db.conventions.pfk.rst.txt  tollan.utils.db.conventions.pg_utcnow.rst.txt  tollan.utils.db.conventions.pk.rst.txt  tollan.utils.db.conventions.table_info_table.rst.txt  tollan.utils.db.conventions.updated_at.rst.txt  tollan.utils.db.conventions.utcnow.rst.txt  tollan.utils.dict_from_object.rst.txt  tollan.utils.dict_from_regex_match.rst.txt  tollan.utils.dirconf.DirConfError.rst.txt  tollan.utils.dirconf.DirConfMixin.rst.txt  tollan.utils.ensure_prefix.rst.txt  tollan.utils.env.EnvRegistry.rst.txt  tollan.utils.file_uri_to_path.rst.txt  tollan.utils.fileloc.rst.txt  tollan.utils.fmt.model_to_dict.rst.txt  tollan.utils.fmt.pformat_dict.rst.txt  tollan.utils.fmt.pformat_fancy_index.rst.txt  (+63 more)
_static/: documentation_options.js
api/: tollan.utils.FileLoc.html  tollan.utils.anysum.html  tollan.utils.call_subprocess_with_live_output.html  tollan.utils.cli.click_helpers.ctx_no_recreate_obj.html  tollan.utils.cli.click_helpers.hook_ctx_make_context.html  tollan.utils.cli.click_helpers.varg_command.html  tollan.utils.cli.multi_action_argparser.MultiActionArgumentParser.html  tollan.utils.cli.path_type.PathType.html  tollan.utils.db.SqlaDB.html  tollan.utils.db.TableDef.html  tollan.utils.db.TableDefList.html  tollan.utils.db.conventions.client_info.html  tollan.utils.db.conventions.client_info_fk.html  tollan.utils.db.conventions.client_info_model.html  tollan.utils.db.conventions.client_info_table.html  tollan.utils.db.conventions.client_info_tbl.html  tollan.utils.db.conventions.created_at.html  tollan.utils.db.conventions.default_sql_utcnow.html  tollan.utils.db.conventions.desc.html  tollan.utils.db.conventions.fk.html  tollan.utils.db.conventions.label.html  tollan.utils.db.conventions.ms_utcnow.html  tollan.utils.db.conventions.name.html  tollan.utils.db.conventions.pfk.html  tollan.utils.db.conventions.pg_utcnow.html  tollan.utils.db.conventions.pk.html  tollan.utils.db.conventions.table_info_table.html  tollan.utils.db.conventions.updated_at.html  tollan.utils.db.conventions.utcnow.html  tollan.utils.dict_from_object.html  tollan.utils.dict_from_regex_match.html  tollan.utils.dirconf.DirConfError.html  tollan.utils.dirconf.DirConfMixin.html  tollan.utils.ensure_prefix.html  tollan.utils.env.EnvRegistry.html  tollan.utils.file_uri_to_path.html  tollan.utils.fileloc.html  tollan.utils.fmt.model_to_dict.html  tollan.utils.fmt.pformat_dict.html  tollan.utils.fmt.pformat_fancy_index.html  (+63 more)
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst
docs/tollan/: index.rst
src/tollan/: __init__.py  _version.py
src/tollan/cli/: __init__.py  config.py
src/tollan/config/: __init__.py  core.py  directory_preset.py  (+2 more)
tests/: __init__.py
tests/config/: __init__.py  test_config_source.py  test_core.py  test_directory_preset.py  test_runtime_context.py  test_types.py
tests/db/: __init__.py  test_db.py  test_db_orm.py
tests/utils/: __init__.py  test_cli.py  test_db.py  test_db_orm.py  test_dict_ops.py  test_fileloc.py  test_general.py  test_log.py  test_nc.py  test_typing.py
tollan/: __init__.py  index.html
tollan/utils/: __init__.py  cli.py  dataclass.py  dataclass_schema.py  dirconf.py  env.py  fmt.py  misc.py  mpl.py  namespace.py  np.py  numpy_dance.py  registry.py  ring.py  schema.py  slice.py  slice_chain.py  sys.py
(+60 files in other folders)
