
[project.urls]
homepage = "https://github.com/toltec-astro/tollan"
documentation = "https://tollan.readthedocs.io/"
repository = "https://github.com/toltec-astro/tollan"
changelog = "https://github.com/toltec-astro/tollan/blob/main/CHANGELOG.md"

[project]
name="tollan"
description = "A shared utility package for astronomical pipeline."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = {file = "LICENSE"}
keywords = ["tollan"]
authors = [
  {name="Zhiyuan Ma", email="zhiyuanma@umass.edu"},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]

dependencies = [
    "loguru",
    "pydantic",
    "pydantic_yaml",
    "astropy",
    "pandas",
    "pyaml",
    "scalpl",
    "tabulate",
    "netcdf4",
]

[project.scripts]
tollan = "tollan.cli:main"

[tool.setuptools.package-data]
"*" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
    "data/*/*/*/*/*",
    "data/*/*/*/*/*/*"
]

[build-system]
requires = ["setuptools",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'


[tool.setuptools_scm]
write_to = "src/tollan/_version.py"

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "ruff",
    "pre-commit",
    "sphinx",
    "myst_parser",
    "sphinx-book-theme",
    "sphinx-automodapi",
]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"

[tool.black]
line-length = 88
force-exclude = '''
^/(
  (
    examples
    |
    docs
    |
    data
    |
    src/tollan/_version.py
  )
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = [
    "docs/*",
    "src/tollan/_version.py"
]
group_by_package = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["ALL"]
exclude=[
    "docs/*",
    "src/tollan/_version.py"
]

[tool.ruff.pydocstyle]
convention = "numpy"
