[metadata]
name = tollan
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.1
author = Zhiyuan Ma
author_email = zhiyuanma@umass.edu
description = A shared utility package for the TolTEC project.
long_description = Tollan is a shared utility package for softwares of the TolTEC project.
license = BSD 3-Clause
url = http://to.be.set
edit_on_github = False
github_project = toltec-astro/tollan
python_requires = ">=3.6"

[options]
install_requires = astropy; numpy; wrapt; pyaml
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =

[options.package_data]
* = *.c
tollan.tests = coveragerc

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
