[metadata]
name = tollan
author = Zhiyuan Ma
author_email = zhiyuanma@umass.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://to.be.set
description = A shared utility package for the TolTEC project.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = toltec-astro/tollan

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    wrapt
    appdirs

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
tollan = data/*

[tool:pytest]
testpaths = "tollan" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    tollan/_astropy_init*
    tollan/conftest.py
    tollan/*setup_package*
    tollan/tests/*
    tollan/*/tests/*
    tollan/extern/*
    tollan/version*
    */tollan/_astropy_init*
    */tollan/conftest.py
    */tollan/*setup_package*
    */tollan/tests/*
    */tollan/*/tests/*
    */tollan/extern/*
    */tollan/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
